<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.homework7.SignupActivity">
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/fname"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:text="@string/fname"
        android:hint="First Name" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/lname"
        android:layout_below="@+id/fname"
        android:layout_centerHorizontal="true"
        android:text="@string/lname"
        android:hint="Last Name" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/signEmail"
        android:layout_below="@+id/lname"
        android:layout_centerHorizontal="true"
        android:text="@string/signEmail"
        android:hint="Email" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/pass1"
        android:inputType="textPassword"
        android:layout_below="@+id/signEmail"
        android:layout_centerHorizontal="true"
        android:text="@string/pass1"
        android:hint="Choose Password" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/pass2"
        android:layout_below="@+id/pass1"
        android:layout_centerHorizontal="true"
        android:text="@string/pass2"
        android:inputType="textPassword"
        android:hint="Repeat Password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/close"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/pass2"
        android:layout_alignLeft="@+id/pass2"
        android:layout_alignStart="@+id/pass2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sup"
        android:id="@+id/signup"
        android:layout_alignTop="@+id/close"
        android:layout_alignRight="@+id/pass2"
        android:layout_alignEnd="@+id/pass2" />

</RelativeLayout>
