<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.homework7.LoginActivity">

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp"
        android:text="@string/email"
        android:hint="Email" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/pass"
        android:layout_below="@+id/email"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:text="@string/pass"
        android:hint="Password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:layout_alignTop="@+id/signup"
        android:layout_alignLeft="@+id/pass"
        android:layout_alignStart="@+id/pass" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/signup"
        android:layout_below="@+id/pass"
        android:layout_alignRight="@+id/pass"
        android:layout_alignEnd="@+id/pass" />

    <com.google.android.gms.common.SignInButton
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:text="Login with Google"
        android:id="@+id/google_sign_in_button"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true">
    </com.google.android.gms.common.SignInButton>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_login_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/google_sign_in_button"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
